# penpot-tauri

./: .gitignore  README.md  build.sh  manifest.yaml  package.json  start.sh
.github/workflows/: ci.yml
flatpak/: com.github.oliben67.penpot-tauri.desktop  com.github.oliben67.penpot-tauri.metainfo.xml
frontend/: index.html
src/: .gitignore  Cargo.toml  tauri.conf.json
src/main/: main.js
src/src/: main.rs
