[package]
name = "penpot"
version = "1.0.0"
description = "Tauri app for Penpot"
authors = ["oliben67"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
